<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="varMoneyType"
            type="String" />
        <variable
            name="viewModel"
            type="xyz.miyayu.android.moneycalculator.MainActivity.AmountsViewModel" />
        <import type="android.view.View"/>
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/moneyType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@{varMoneyType}"
        app:layout_constraintBaseline_toBaselineOf="@+id/inputMoneyAmount"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputMoneyAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/countHint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="0"
        app:layout_constraintBaseline_toBaselineOf="@+id/addButton"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/subButton" />

    <Button
        android:id="@+id/subButton"
        android:layout_width="50dp"
        android:layout_height="50sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/sub"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/inputMoneyAmount"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/add"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/inputMoneyAmount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="100dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>